--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,9 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './base/common';
+@import './components/button';
+@import './components/input';
+@import './components/photo-card';
+@import './layout/form';
+@import './layout/gallery';
