--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -1,11 +1,8 @@
 .search-form {
   display: flex;
-  flex-direction: center;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   //   width: 100%;
   padding: 10px 20px;
-  //     display: flex;
-  //     justify-content: center;
-  //     align-items: center;
 }
