--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,7 +1,3 @@
-:root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 *,
 *::before,
 *::after {
@@ -9,17 +5,12 @@
 }
 
 body {
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
-}
-
-img {
-  display: block;
-  // width: 100%;
 }
