--- a/src/sass/components/_photo-card.scss
+++ b/src/sass/components/_photo-card.scss
@@ -1,44 +1,35 @@
 .photo-card {
+  position: relative;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
-  margin-bottom: 30px;
-  //   background: $light-color;
+  justify-content: space-between;
+  height: 100%;
+  padding-bottom: 8px;
+  border: 1px solid #eeeeee;
+  border-bottom: none;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
 
-  //   @media screen and (min-width: 480px) {
-  //     height: 404px;
-  //   }
-
-  //   @media screen and (min-width: 768px) {
-  //     width: 354px;
-  //     &:nth-child(odd) {
-  //       margin-right: 30px;
-  //     }
-  //   }
-
-  //   @media screen and (min-width: 1200px) {
-  //     width: 370px;
-
-  //     &:nth-child(even) {
-  //       margin-right: 0px;
-  //     }
-
-  //     &:not(:nth-child(2n)) {
-  //       margin-right: 30px;
-  //     }
-
-  //     &:nth-last-child(-n + 2) {
-  //       margin-bottom: 0px;
-  //     }
-  //   }
+  & img {
+    height: 300px;
+    object-fit: cover;
+    max-width: 100%;
+  }
 }
 
 .info {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-around;
-}
+  padding: 8px;
+  flex-grow: 1;
 
-// .info-item:not(:last-child) {
-//   margin-right: 12px;
-// }
+  &-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 24px;
+    font-size: 17px;
+  }
+}
