--- a/src/templates/img-card.hbs
+++ b/src/templates/img-card.hbs
@@ -2,10 +2,10 @@
     <div class="photo-card">
         <img src="{{webformatURL}}" alt="{{tags}}" loading="lazy" />
         <div class="info">
-            <p class="info-item"><b>Likes</b> {{likes}}</p>
-            <p class="info-item"><b>Views</b> {{views}}</p>
-            <p class="info-item"><b>Comments</b> {{comments}}</p>
-            <p class="info-item"><b>Downloads</b> {{downloads}}</p>
+            <p class="info-item"><b>Likes</b><span>{{likes}}</span></p>
+            <p class="info-item"><b>Views</b><span>{{views}}</span></p>
+            <p class="info-item"><b>Comments</b><span>{{comments}}</span> </p>
+            <p class="info-item"><b>Downloads</b><span>{{downloads}}</span></p>
         </div>
     </div>
 {{/each}}
