--- a/src/sass/components/_photo-card.scss
+++ b/src/sass/components/_photo-card.scss
@@ -1,5 +1,5 @@
 .photo-card {
-  position: relative;
+  // position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
