--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -10,6 +10,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  // padding: 20 px 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
