--- a/src/templates/img-card.hbs
+++ b/src/templates/img-card.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
     <div class="photo-card">
-        <img src="{{webformatURL}}" alt="{{tags}}" loading="lazy" />
+        <a href="{{largeImageURL}}"></a><img src="{{webformatURL}}" alt="{{tags}}" loading="lazy" /></a>
         <div class="info">
             <p class="info-item"><b>Likes</b><span>{{likes}}</span></p>
             <p class="info-item"><b>Views</b><span>{{views}}</span></p>
